--- a/downloads/OFICIAL-arduino_as3glue_bundle_v2.0/serproxy/serproxy.cfg
+++ b/downloads/OFICIAL-arduino_as3glue_bundle_v2.0/serproxy/serproxy.cfg
@@ -47,8 +47,9 @@ timeout=300
 #serial_device1=/dev/cu.usbserial-$$$$$$$$
 #serial_device1=/dev/cu.usbmodem$$$
 
-#serial_device1=/dev/tty.usbmodemfa131
-serial_device1=/dev/cu.usbmodemfa131
+serial_device1=/dev/tty.usbmodemfa131
+#serial_device1=/dev/cu.usbmodemfa131
+#serial_device1=/dev/tty.usbserial-FTG9KA28
 
 # decomment below
 
